[OS/2] Bug 333235: Get Thebes to work on OS/2. Required build additions and easy widget changes. r=mkaply