gfx/thebes/src/gfxPlatform.cpp
@@ -45,6 +45,8 @@
 #include "gfxPlatformGtk.h"
 #elif defined(XP_BEOS)
 #include "gfxBeOSPlatform.h"
+#elif defined(XP_OS2)
+#include "gfxOS2Platform.h"
 #endif
 
 #include "gfxContext.h"
@@ -72,6 +74,8 @@ gfxPlatform::GetPlatform()
         gPlatform = new gfxPlatformGtk;
 #elif defined(XP_BEOS)
         gPlatform = new gfxBeOSPlatform;
+#elif defined(XP_OS2)
+        gPlatform = new gfxOS2Platform;
 #endif
     }
 
